<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="all">
        <item
            android:id="@+id/drawer_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/drawer_apply_loan"
            android:checkableBehavior="none"
            android:icon="@drawable/ic_credit_card"
            android:title="@string/apply_for_loan" />

        <item
            android:id="@+id/drawer_manage_account"
            android:checkableBehavior="none"
            android:icon="@drawable/ic_account"
            android:title="@string/manage_account" />

        <item
            android:id="@+id/drawer_my_loans"
            android:checkableBehavior="none"
            android:icon="@drawable/ic_local_atm"
            android:title="@string/my_loans" />

    </group>

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/drawer_invite_friends"
            android:icon="@drawable/ic_invite_friends"
            android:title="@string/invite_friends" />

        <item
            android:id="@+id/drawer_feedback"
            android:icon="@drawable/ic_feedback"
            android:title="@string/feedback" />

        <item
            android:id="@+id/drawer_help"
            android:icon="@drawable/ic_help"
            android:title="@string/help_and_faqs" />
    </group>
</menu>