<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ekopa.android.app.fragment.ResetPasswordFragment">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prompt_reset_password"
                android:textColor="@color/body_text_1"
                android:textSize="@dimen/two_and_half_text_unit" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/one_grid_unit"
                android:text="@string/explain_code" />


            <EditText
                android:id="@+id/input_token"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="@dimen/four_grid_unit"
                android:hint="@string/code"
                android:inputType="number"
                android:maxLength="8"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/input_new_password_reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="@dimen/four_grid_unit"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/input_confirm_password_reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textSize="16sp" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnReset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/one_grid_unit"
                android:minHeight="?attr/listPreferredItemHeight"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/reset"
                android:textColor="@color/cardview_light_background"
                android:theme="@style/primaryButtons" />

            <TextView
                android:id="@+id/link_resend"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/one_grid_unit"
                android:gravity="center"
                android:text="@string/resend_code"
                android:textSize="16sp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>

