<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ekopa.android.app.fragment.HomeActiveLoanFragment">

    <LinearLayout
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:contentDescription="@string/user_image"
            android:src="@drawable/avatar" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="221dp"
                android:layout_height="wrap_content"
                android:text="@string/cash_sample_2"
                android:textColor="@color/body_text_1"
                android:textSize="@dimen/four_text_unit" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loan_balance"
                android:textColor="@color/body_text_1"
                android:textSize="@dimen/two_and_quarter_text_unit" />
        </LinearLayout>
    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/payment_installments"
                android:textColor="@color/body_text_1"
                android:textSize="@dimen/two_and_half_text_unit" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/one_grid_unit"
                android:text="@string/explain_payment" />

            <LinearLayout
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:minHeight="?attr/listPreferredItemHeightSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/date_sample_1"
                    android:textColor="@color/body_text_1"
                    android:textSize="@dimen/two_text_unit" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cash_sample"
                    android:textColor="@color/body_text_1"
                    android:textSize="@dimen/two_text_unit" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:minHeight="?attr/listPreferredItemHeightSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/date_sample_2"
                    android:textColor="@color/body_text_1"
                    android:textSize="@dimen/two_text_unit" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cash_sample"
                    android:textColor="@color/body_text_1"
                    android:textSize="@dimen/two_text_unit" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:minHeight="?attr/listPreferredItemHeightSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/date_sample_3"
                    android:textColor="@color/body_text_1"
                    android:textSize="@dimen/two_text_unit" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cash_sample"
                    android:textColor="@color/body_text_1"
                    android:textSize="@dimen/two_text_unit" />

            </LinearLayout>




            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnMakePayment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?attr/listPreferredItemHeight"
                android:layout_marginTop="@dimen/two_grid_unit"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/make_payment"
                android:textColor="@color/cardview_light_background"
                android:theme="@style/paymentButtons" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
