<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    tools:context="com.ekopa.android.app.activity.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="56dp">


        <android.support.v7.widget.CardView
            android:id="@+id/view2"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center_horizontal"
            android:innerRadius="0dp"
            android:shape="ring"
            android:thicknessRatio="1.9"
            app:cardCornerRadius="65dp">

            <FrameLayout
                android:id="@+id/fl_fragment_post_recipe_picture_container"
                android:layout_width="fill_parent"
                android:layout_height="130dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:selectableItemBackground"
                tools:targetApi="honeycomb">

                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/img_sign_up_photo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:civ_border_color="@color/md_green_100"
                    app:civ_border_width="0dp" />

                <ImageView
                    android:id="@+id/img_sign_up_icon"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    app:srcCompat="@drawable/ic_add_a_photo" />
            </FrameLayout>
        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/prompt_take_picture"
            android:textSize="16sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:text="@string/users_with_picture_earn"
            android:textSize="12sp" />

        <!-- National ID Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_idNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/national_id"
                android:inputType="number"
                android:maxLength="8"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <!-- Phone Number Label -->
        <!-- Phone Label -->

        <com.lamudi.phonefield.PhoneInputLayout
            android:id="@+id/input_phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:textSize="16sp" />


        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_password_signUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="numberPassword"
                android:maxLength="4"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <!-- Confirm Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_confirm_password_signUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:inputType="numberPassword"
                android:maxLength="4"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <!-- Agree to Terms -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/cb_terms_conditions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agree_to"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/link_terms_and_condition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@string/terms_and_condition"
                android:textColor="@color/md_blue_700"
                android:textSize="16sp" />
        </LinearLayout>
        <!-- Signup Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="14dp"
            android:padding="12dp"
            android:text="@string/create_account"
            android:theme="@style/primaryButtons" />

        <TextView
            android:id="@+id/link_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/prompt_already_member"
            android:textSize="16sp" />

    </LinearLayout>
</ScrollView>